--- a/style.css
+++ b/style.css
@@ -1,13 +1,101 @@
-body{
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    background-color: #f4f4f4;
 }
 
-canvas{
-    position: absolute;
+.container {
+    position: relative;
+    text-align: center;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 2em;
+    border-radius: 8px;
+}
+
+input {
+    padding: 10px;
+    width: 80%;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+button {
+    padding: 12px 24px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 2em;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.notification {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+}
+
+.video-container {
+    margin-top: 20px;
+}
+
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.captured-data {
+    margin-top: 20px;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.captured-item {
+  margin-bottom: 15px;
+}
+
+.captured-item img {
+  max-width: 200px;
+  margin-top: 10px;
+}
+.delete-button {
+    margin-top: 10px;
+    padding: 6px 12px;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 32%;
+  }
+  
+  .delete-button:hover {
+    background-color: #c82333;
+  }
+  .captured-item {
+    display: flex;
+    flex-direction: column;
+    font-size: size;
+    font-size: 15px;
+    gap: 7px;
+    padding: 10px;
 }
