--- a/style.css
+++ b/style.css
@@ -1,13 +1,118 @@
-body{
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #797a75;
+  background: url(pexels-artempodrez-7233376\ \(1\).jpg);
+  background-repeat: repeat;
+  background-size: cover;
 }
 
-canvas{
-    position: absolute;
+video#video {
+  width: 620px;
+  height: 322px;
+}
+
+input {
+  padding: 10px;
+  width: 80%;
+  margin: 10px 0;
+  /* border: 1px solid #23272169; */
+  border-radius: 4px;
+  font-size: 16px;
+  border-radius: 4px;
+  font-size: 16px;
+  border: 1px solid black;
+  position: relative;
+  z-index: 10; /* Ensure it's above the canvas */
+  outline: none;
+}
+
+#captureButton {
+  padding: 12px 24px;
+  background-color: #241f30cf;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 12px;
+}
+
+button:hover {
+  background-color: #241f30;
+}
+
+.notification {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #333;
+  font-weight: bold;
+}
+
+.video-container {
+  margin-top: 20px;
+}
+
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.captured-data {
+  margin-top: 20px;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.captured-item {
+  margin-bottom: 15px;
+}
+
+.captured-item img {
+  max-width: 230px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgb(0 0 0);
+}
+.delete-button {
+  margin-top: 10px;
+  padding: 10px 8px;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 36%;
+}
+.delete-button:hover {
+  background-color: #c82333;
+}
+
+.captured-item {
+  display: flex;
+  flex-direction: column;
+  font-size: size;
+  font-size: 15px;
+  gap: 7px;
+  padding: 10px;  
+  font-weight:bolder ;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  background-color: #42525700;
+  box-shadow: 0 4px 8px rgb(0 0 0);
+  margin-top: 2em;
+  border-radius: 8px;
 }
