--- a/sign.css
+++ b/sign.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +6,8 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    background-image: url(pexels-artempodrez-7233376\ \(1\).jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: hsl(252deg 13% 46% / 38%);
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,14 +17,18 @@ body {
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
+    color: black;
 }
 
 form {
-    background-color: #fff;
+    background-color: hsl(252deg 13% 46% / 53%);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3),
+        0 4px 6px rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     width: 100%;
     max-width: 400px;
     height: 53vh;
@@ -37,19 +38,20 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-    color: #555;
+    color: black;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"],
+input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
-   
+
 }
 
-  
+
 button {
     padding: 12px 24px;
     background-color: #241f30cf;
@@ -60,6 +62,7 @@ button {
     cursor: pointer;
     margin: 12px;
 }
+
 button:hover {
-  background-color: #241f30;
+    background-color: #241f30;
 }
