--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #797a75;
-  background: url(pexels-artempodrez-7233376\ \(1\).jpg);
-  background-repeat: repeat;
-  background-size: cover;
+  background-color: hsl(252deg 13% 46% / 38%);
 }
 
 video#video {
@@ -35,6 +32,7 @@ input {
 #captureButton {
   padding: 12px 24px;
   background-color: #241f30cf;
+
   color: white;
   border: none;
   border-radius: 4px;
@@ -111,7 +109,7 @@ canvas {
 .container {
   position: relative;
   text-align: center;
-  background-color: #42525700;
+  background-color: hsl(252deg 13% 46% / 32%);
   box-shadow: 0 4px 8px rgb(0 0 0);
   margin-top: 2em;
   border-radius: 8px;
